--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "docx-to-pdf": "^1.1.0",
     "express": "^4.18.2"
   },
   "scripts": {
